# TerranSoul

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CREDITS.md  Cargo.toml  Dockerfile.mcp  LICENSE  QUEST_SYSTEM_QA.md  README.md  SECURITY.md  docker-compose.mcp.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright-validate.config.ts  playwright.config.ts  temp_output.txt  test-output.txt  vite-profile-0.cpuprofile  vite.config.ts
.cargo/: config.toml
.claude/: settings.local.json
Pages/: i18n-strings.json
crates/hive-relay/: Cargo.toml  Dockerfile  build.rs  docker-compose.yml
crates/hive-relay/docs/: README.md  api-reference.md  architecture.md  deployment.md  getting-started.md
crates/hive-relay/proto/: hive.proto
crates/hive-relay/src/: db.rs  lib.rs  main.rs  relay.rs  verify.rs
src-tauri/: Cargo.toml  Info.ios.plist  build.rs  clippy.toml  code_index.sqlite  tauri.conf.json  tauri.ios.conf.json
src-tauri/benches/: memory_quality.rs  memory_quality_fixture.json  million_memory.rs
src-tauri/capabilities/: default.json  main.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/proto/terransoul/: brain.v1.proto  phone_control.v1.proto
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: gitnexus_sidecar.rs  mod.rs  openclaw_agent.rs  prompt_agent.rs  stub_agent.rs
src-tauri/src/agents/: cli_worker.rs  mod.rs  roster.rs
src-tauri/src/ai_integrations/: gateway.rs  mod.rs
src-tauri/src/ai_integrations/grpc/: mod.rs  phone_control.rs
src-tauri/src/ai_integrations/mcp/: activity.rs  auth.rs  auto_setup.rs  compliance_gate.rs  hooks.rs  integration_tests.rs  mod.rs  router.rs  self_host.rs  stdio.rs  tools.rs
src-tauri/src/brain/: brain_config.rs  brain_store.rs  circuit_breaker.rs  cloud_embeddings.rs  context_budget.rs  doc_catalogue.rs  docker_ollama.rs  embedding_registry.rs  free_api.rs  intent_classifier.rs  lm_studio.rs  maintenance_runtime.rs  maintenance_scheduler.rs  mcp_auto_config.rs  mod.rs  model_recommender.rs  ollama_agent.rs  ollama_lifecycle.rs  openai_client.rs  provider_policy.rs  provider_rotator.rs  providers.rs  ram_budget.rs  segmenter.rs  selection.rs  system_info.rs
src-tauri/src/coding/: agent_session_lessons.rs  ambient.rs  ambient_scheduler.rs  ambient_validation.rs  apply_file.rs  autostart.rs  branch_overlay.rs  branch_sync.rs  client.rs  code_search.rs  context_budget.rs  context_engineering.rs  conversation_learning.rs  cost.rs  dag_runner.rs  diff_impact.rs  diff_overlay.rs  drift.rs  engine.rs  gate_telemetry.rs  git_ops.rs  github.rs  graph_explain.rs  graph_export.rs  graph_tours.rs  handoff.rs  handoff_store.rs  hooks.rs  metrics.rs  milestones.rs  mod.rs  multi_agent.rs  offload.rs  offload_tool_output_hook.rs  parser_registry.rs  processes.rs  promotion_plan.rs  prompting.rs  rename.rs  repo.rs  (+22 more)
src-tauri/src/commands/: agent.rs  agents_roster.rs  auto_setup.rs  brain.rs  character.rs  charisma.rs  chat.rs  coding.rs  coding_sessions.rs  companions.rs  consolidation.rs  context_folder.rs  crag.rs  cross_source.rs  docker.rs  emotion.rs  github_auth.rs  gitnexus.rs  grpc.rs  identity.rs  ingest.rs  ipc_contract_tests.rs  lan.rs  lan_share.rs  link.rs  mcp.rs  memory.rs  memory_sources.rs  messaging.rs  mod.rs  package.rs  persona.rs  plugins.rs  prompt_commands.rs  quest.rs  registry.rs  repos.rs  routing.rs  safety.rs  sandbox.rs  (+11 more)
src-tauri/src/container/: mod.rs
src-tauri/src/hive/: jobs.rs  mod.rs  privacy.rs  protocol.rs  signing.rs
src-tauri/src/identity/: device.rs  key_store.rs  mod.rs  qr.rs  trusted_devices.rs
src-tauri/src/integrations/: companions.rs  mod.rs
src-tauri/src/link/: handlers.rs  manager.rs  mod.rs  quic.rs  ws.rs
src-tauri/src/memory/: ann_flush.rs  ann_index.rs  audit.rs  auto_learn.rs  auto_tag.rs  backend.rs  brain_maintenance.rs  brain_memory.rs  cap.rs  cascade.rs  cassandra.rs  chunking.rs  code_rag.rs  cognitive_kind.rs  confidence_decay.rs  conflicts.rs  consolidation.rs  context_pack.rs  contextualize.rs  crag.rs  crdt_sync.rs  disk_backed_ann.rs  drilldown.rs  edge_conflict_scan.rs  edge_crdt_sync.rs  edges.rs  embedding_queue.rs  eviction.rs  extraction.rs  fusion.rs  gap_detection.rs  gitnexus_mirror.rs  graph_page.rs  graph_paging.rs  graph_rag.rs  hyde.rs  instruction_slices.rs  ivf_pq.rs  judgment.rs  kg_cache.rs  (+39 more)
src-tauri/src/messaging/: message_bus.rs  mod.rs
src-tauri/src/network/: lan_addresses.rs  lan_probe.rs  lan_share.rs  mod.rs  pair_token.rs  pairing.rs  vscode_log.rs  vscode_probe.rs
src-tauri/src/orchestrator/: agent_orchestrator.rs  agentic_rag.rs  coding_router.rs  mod.rs  self_rag.rs  supervision.rs
src-tauri/src/package_manager/: installer.rs  manifest.rs  mod.rs  registry.rs  signing.rs
src-tauri/src/persona/: charisma.rs  drift.rs  extract.rs  mod.rs  motion_clip.rs  motion_feedback.rs  motion_reconstruction.rs  motion_smooth.rs  motion_tokens.rs  pack.rs  pose_frame.rs  prosody.rs  retarget.rs
src-tauri/src/plugins/: host.rs  manifest.rs  mod.rs
src-tauri/src/registry_server/: catalog.rs  catalog_registry.rs  distribution_e2e_tests.rs  http_registry.rs  mod.rs  server.rs
src-tauri/src/resilience/: heartbeat.rs  mod.rs
src-tauri/src/routing/: ai_integrations.rs  command_envelope.rs  mod.rs  permission.rs  router.rs
src-tauri/src/sandbox/: capability.rs  host_api.rs  mod.rs  wasm_runner.rs  wasm_runner_stub.rs
src-tauri/src/settings/: config_store.rs  mod.rs
src-tauri/src/sync/: append_log.rs  lww_register.rs  mod.rs  or_set.rs
src-tauri/src/tasks/: manager.rs
src-tauri/src/teachable_capabilities/: mod.rs  registry.rs
src-tauri/src/voice/: config_store.rs  edge_tts.rs  mod.rs  sidecar_client.rs  stub_asr.rs  stub_diarization.rs  stub_tts.rs  supertonic_download.rs  supertonic_manifest.rs  supertonic_paths.rs  supertonic_tts.rs  whisper_api.rs
src-tauri/src/vscode_workspace/: launcher.rs  mod.rs  path_norm.rs  registry.rs  resolver.rs
src-tauri/src/workflows/: engine.rs  mod.rs  resilience.rs
src-tauri/tests/: companions_live.rs  ollama_self_improve_smoke.rs
(+938 files in other folders)
