[package]
name = "terransoul"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "terransoul_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
qrcode = "0.14"
base64 = "0.22"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
sysinfo = "0.32"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
scraper = "0.22"
url = "2"
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
axum = { version = "0.8.4", features = [] }
wasmtime = { version = "36.0.7", default-features = false, features = ["cranelift", "runtime"] }
thiserror = "2"
rand = { version = "0.8", optional = true }

# Distributed database backends (optional)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }
tiberius = { version = "0.12", features = ["tds73"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
scylla = { version = "0.14", optional = true }

[features]
default = []
postgres = ["dep:sqlx"]
mssql = ["dep:tiberius", "dep:tokio-util"]
cassandra = ["dep:scylla", "dep:rand"]

[dev-dependencies]
tempfile = "3"
# Enables tauri::test::{mock_app, MockRuntime} for headless integration tests.
# Resolver=2 (default for edition=2021) keeps this dev-only feature out of the
# production binary.
tauri = { version = "2", features = ["tray-icon", "test"] }
