[package]
name = "hive-relay"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TerranSoul Hive relay server — opt-in federation for knowledge sharing"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.12", features = ["transport", "tls"] }
prost = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmp-serde = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = "3"
rand_core = { version = "0.6", features = ["getrandom"] }
